Small responsive fix: Wrap content.

--- a/_frontend/src/components/public_movie_container.css
+++ b/_frontend/src/components/public_movie_container.css
@@ -12,6 +12,7 @@
     justify-content: space-around;
     border-bottom: solid 3px #3d3d3d;
     margin-bottom: 2em;
+    flex-wrap: wrap;
 }
 
 .public-movie-item-header h2 {
@@ -21,6 +22,7 @@
 .public-movie-item-wrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     background: white;
     padding: 0.5em;
